2005-03-14  Richard Spindler <richard.spindler AT gmail.com>

 * Set a minimum Size for Trimming
 * Fixed Timeline Rendering Artefact
 * Fixed Ruler Reset Artefact
 * Fixed Missing Filename in Window Title on "Load last File"
 * Fixed Enable/Disable of Undo/Redo Buttons+Menu

2005-03-11  Richard Spindler <richard.spindler AT gmail.com>

 * Made Ruler to snap to the Grid
 * Updated TinyXML to Version 2.3.3
 * Saving of Envelope, Trim and Stretch works now

2005-03-06  Richard Spindler <richard.spindler AT gmail.com>

 * Changed lots of internal stuff, to fix the Trimmer, Envelope, etc..

2005-02-28  Richard Spindler <richard.spindler AT gmail.com>

 * hopefully fixed SoundTouch Test in configure.ac

2005-02-26  Richard Spindler <richard.spindler AT gmail.com>

 * added Undo-Redo for Envelope Editing
 * some fixes for configure.ac (Beware, requires soundtouch.m4 to be found by
 aclocal when ./reconf is run)
 * some more fixes for configure.ac regarding wxWin

2005-02-23  Richard Spindler <richard.spindler AT gmail.com>

 * more Improvements to Sample Editor

2005-02-22  Richard Spindler <richard.spindler AT gmail.com>

 * redesigned SoundManager
 * Improvements to Sample Editor

2005-02-19  Georg E Schneider <georg AT georgs.org>

 * Corrected spec - file
 * Changed rpmbuild script that userbuild is possible

2005-01-19  Richard Spindler <richard.spindler AT gmail.com>

 * Fade In/Out stays if item is dragged

2005-01-15  Richard Spindler <richard.spindler AT gmail.com>

 * Fade In/Out finally Works :)

2004-12-21  Richard Spindler <richard.spindler AT gmail.com>

 * Changed Behavior to use Ctrl+Klick for Copy instead of right Mouse-Button

2004-11-29  Richard Spindler <richard.spindler AT gmail.com>

 * Implemented Envelope Editing (incomplete, and won't affect Audio)

2004-11-24  Richard Spindler <richard.spindler AT gmail.com>

 * Did the same as yesterday to Rubber Frame Selection
 * Changed Email Address in Changelog ;)
